# TagPulse

./: .editorconfig  .env.example  .gitignore  .lycheeignore  .markdownlint.jsonc  .markdownlintignore  AGENTS.md  AI-First-Development-Project-Template.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IoT.md  Makefile  README.md  alembic.ini  azure.yaml  docker-compose.yml  openapi.json  pyproject.toml
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: build-and-push.yml  ci.yml  deploy-azure.yml  dev-kv-cleanup.yml  dev-wake.yml  docs-lint.yml  rotate-ui-token.yml
clients/pi/: README.md  pyproject.toml
clients/pi/examples/: .tp_paho_edge.env.example  drive_track.sh  paho_smoke_publisher.py  run_reader.py
clients/pi/examples/tracks/: boston-loop.csv  chicago-loop.csv  dc-loop.csv  la-loop.csv  sfo-loop.csv
clients/pi/tagpulse_edge/: __init__.py  agent.py  buffer.py  clock.py  config.py  dedup.py  events.py  transport.py  wm_v2_producer.py
clients/pi/tests/: test_agent.py  test_buffer.py  test_clock.py  test_dedup.py  test_transport_token_revoked.py  test_wm_v2_producer.py  test_wm_v2_producer_e2e.py
config/: database.yaml.example
deploy/azure/: .env.dev.example  .env.example  .env.prod.example  .env.staging.example  README.md
deploy/common/: migrations-job.yaml
docker/: mosquitto-entrypoint.sh  mosquitto.Dockerfile  mosquitto.prod.conf
docs/: architecture.md  azure-architecture.md  azure-iot-asset-tracking.md  backlog.md  current-state.md  data-models.md  operator-quickstart.md  quickstart.md  review-checklist.md  roadmap.md  user-guide.md
docs/adr/: 001-python-fastapi-backend.md  002-mqtt-device-connectivity.md  003-timescaledb-storage.md  004-monolith-plugin-analytics.md  005-embedded-rules-engine.md  006-webhook-integration-layer.md  007-admin-ui-technology.md  008-multi-tenancy-strategy.md  009-containerization-local-dev.md  010-internal-event-bus.md  011-device-identity-roadmap.md  012-mtls-for-mqtt.md  013-telemetry-subject-scoping.md  014-telemetry-multi-subject-ingest.md  015-telemetry-rules-and-deprecation.md  016-multi-cloud-deployment-strategy.md  017-network-hardening.md  018-frontend-cloud-deployment.md  019-categories.md  020-labels-first-class.md  021-configurable-sensing-events.md  022-soft-assets.md  023-outbound-connections-mqtt-kafka.md  024-position-estimation.md  025-edge-wire-format-v2.md  026-presence-model.md  027-reader-to-edge-contract.md  028-tags-as-first-class-entity.md  029-ui-design-tokens.md  030-list-page-column-filters.md  031-stock-item-force-delete-ledger.md  032-configurable-ui.md  033-epc-binding-resolves-uri-or-hex.md  034-asset-state-consolidation.md  README.md
docs/assets/: azure-deployed-resources.drawio  azure-deployed-resources.excalidraw
docs/design/: admin-ui.md  alerts-anomaly-detection.md  analytics-module-framework.md  asset-tracking-gap-analysis.md  assets-and-zones.md  configurable-column-visibility.md  (+36 more)
migrations/: env.py
scripts/: README.md  azd-bootstrap-mqtt.sh  azd-bootstrap.sh  azd-cicd-setup.sh  azd-cicd-verify.sh  azd-doctor.sh  azd-env-load.sh  azd-grant-operator-kv.sh  azd-image-check.sh  azd-job.sh  azd-kv-audit.sh  azd-kv-get.sh  azd-kv-recover.sh  azd-logs.sh  azd-mqtt-build.sh  azd-mqtt-restart.sh  azd-network-check.sh  azd-pg-ensure-running.sh  azd-preflight.sh  azd-smoke.sh  azd-ui-token-rotate.sh  azd-ui-token.sh  backfill_history.py  benchmark_pg_metrics.py  check_devices_online.py  cleanup_demo_stock_items.py  clear_quarantine.py  export_openapi.py  get_kv_secret.py  load_test.py  measure_baseline.py  mqtt_canary.py  mqtt_tap.py  register_inventory_tags.py  reset_demo_tenant.py  seed_alerts.py  seed_branding.py  seed_demo_tenant.py  seed_nonperishable_skus.py  seed_register_tags.py  (+16 more)
(+405 files in other folders)
