[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tagpulse"
version = "0.1.0"
description = "IoT platform for RFID tag readers and sensor data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiomqtt>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-prometheus>=0.49b0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-logging>=0.49b0",
    "prometheus-client>=0.21",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "httpx>=0.27",  # async test client for FastAPI
]
azure = [
    # Sprint 22 Phase C — App Insights via OTel distro for ACA deployments.
    "azure-monitor-opentelemetry>=1.6",
    # Sprint 26 D3 — Key Vault push for smoke_setup.py's admin/role keys
    # so the tools-job's stdout (and Log Analytics) never see plaintext.
    "azure-identity>=1.19",
    "azure-keyvault-secrets>=4.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101", "S104", "B008", "B027"]  # allow assert in tests, allow binding to all interfaces, allow Depends() in defaults

[tool.ruff.lint.isort]
known-first-party = ["tagpulse"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
