[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tagpulse-edge"
version = "0.1.0"
description = "Reference edge-device client for TagPulse (Raspberry Pi RFID readers)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "paho-mqtt>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tagpulse_edge*"]
